welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:6: error: not found: value i
	return x/(i+1)
                  ^